# rogueclone2s

./: .gitignore  AUTHORS  COPYING  ChangeLog  ChangeLog-0  INSTALL  MANIFEST  Makefile.am  NEWS  README  TODO  configure.ac
.github/workflows/: ci.yml
doc/: Makefile.am  options.doc  pua-font-plan.md  rogue.doc
man/: Makefile.am  rogue.man
msg/: Makefile.am  mesg  mesg_E
packaging/plamo/: PlamoBuild.rogueclone2s  PlamoBuild.rogueclone2s-7.0
src/: Makefile.am  curses.c  curses.h  display.c  display.h  hit.c  hit.h  init.c  init.h  invent.c  invent.h  level.c  level.h  machdep.c  machdep.h  main.c  main.h  message.c  message.h  monster.c  monster.h  move.c  move.h  mutf8.c  mutf8.h  object.c  object.h  pack.c  pack.h  play.c  play.h  playmenu.c  playmenu.h  random.c  random.h  ring.c  ring.h  rogue.h  room.c  room.h  (+17 more)
