bin_PROGRAMS = rogue

rogue_SOURCES = \
	curses.c \
	hit.c \
	init.c \
	invent.c \
	level.c \
	machdep.c \
	main.c \
	message.c \
	monster.c \
	move.c \
	object.c \
	pack.c \
	play.c \
	random.c \
	ring.c \
	room.c \
	save.c \
	score.c \
	spechit.c \
	throw.c \
	trap.c \
	use.c \
	zap.c

rogue_CFLAGS = -std=c99 \
               -pedantic \
               -Wall \
               -DUNIX \
               -DUNIX_SYSV \
               -DCURSES \
               -DCOLOR \
               -DJAPAN \
               -DEUC \
               -DTOPSCO
